<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="false"
    tools:context="com.example.kwong4.kwong4_habittracker.Add_Habits">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/Name_input_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/adding_a_habit"
        android:id="@+id/AddHabit_title"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Name_input_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/Date_input_title"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/Name_input_title"
        android:layout_alignStart="@+id/Name_input_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/days"
        android:id="@+id/Days_input_title"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/Date_input_title"
        android:layout_alignStart="@+id/Date_input_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/Date_input"
        android:layout_above="@+id/Days_input_title"
        android:layout_toEndOf="@+id/Name_input_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Name_input"
        android:layout_alignBottom="@+id/Name_input_title"
        android:layout_alignEnd="@+id/Date_input"
        android:layout_toEndOf="@+id/AddHabit_title"
        android:layout_alignStart="@+id/Date_input" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/checkBox_Mon"
        android:checked="false"
        android:layout_below="@+id/Days_input_title"
        android:layout_alignStart="@+id/Days_input_title"
        android:layout_marginTop="34dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/checkBox_Tues"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox_Mon"
        android:layout_toEndOf="@+id/checkBox_Mon"
        android:layout_marginStart="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/checkBox_Wed"
        android:checked="false"
        android:layout_above="@+id/checkBox_Thurs"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/checkBox_Thurs"
        android:checked="false"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/checkBox_Mon"
        android:layout_alignStart="@+id/checkBox_Mon" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/checkBox_Fri"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox_Thurs"
        android:layout_alignEnd="@+id/checkBox_Tues" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/checkBox_Sat"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox_Fri"
        android:layout_alignStart="@+id/checkBox_Wed" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/checkBox_Sun"
        android:checked="false"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/checkBox_Thurs"
        android:layout_toEndOf="@+id/Date_input_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:id="@+id/Add_Button"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/checkBox_Sun"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
